# synthetic-ai

./: .dockerignore  .gitignore  .gitlab-ci.yml  .markdownlint.json  .pylintrc  Dockerfile  Makefile  README.md  contributing.md  notes.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml  python-publish.yml  test.yml
configs/: main.yaml
configs/callbacks/: checkpoint.yaml  default.yaml  early_stopping.yaml
configs/datamodule/: aislellm.yaml  discriminator.yaml
configs/hydra/: default.yaml
configs/logger/: default.yaml  dvc-logger.yaml  mlflow.yaml  tensorboard.yaml
configs/model/: discriminator.yaml  llm.yaml
configs/paths/: default.yaml
configs/trainer/: auto.yaml  gpu.yaml  ray-test.yaml
dvclive/: metrics.json  params.yaml  report.html
dvclive/plots/metrics/: epoch.tsv  lr-Adam.tsv
dvclive/plots/metrics/loss/: train.tsv
examples/: example.ipynb
experiments/: main.py
notebooks/: AudioLM.ipynb
scripts/: docker-installation-steps.sh  entrypoint.sh  pytest.sh
src/: README.md
src/sai/: nn.py
src/sai/datalab/: _version.py  benchmark.py  logging.py  metrics.py  target_data_generate.py  target_data_manipulation.py
src/sai/datalab/cython/: cython_metric.py
src/sai/datalab/datasets/: loader.py
src/sai/datalab/synthesizers/: __init__.py  base.py  data_processor.py  flatautoencoder.py  identity.py  shuffle.py  utils.py
src/sai/datalab/utils/: exceptions.py
src/sai/datasets/: __init__.py  dataset.py  llm.py  musiccaps.py
src/sai/models/: __init__.py  classifier.py  llm.py  mulan.py  musiclm.py  sequential.py
src/sai/models/music/: __init__.py  audiolm.py  loss.py  mulan.py  musiclm.py  utils.py
src/sai/models/music/audiolm_pytorch/: __init__.py  audiolm_pytorch.py  data.py  hubert_kmeans.py  optimizer.py  soundstream.py  t5.py  trainer.py  vq_wav2vec.py
src/sai/models/music/hubert/: __init__.py
src/sai/models/music/musiclm_pytorch/: __init__.py  distributed.py  musiclm_pytorch.py  trainer.py
src/sai/pipeline/: utils.py
src/sai/utils/: __init__.py  nb.py  tensor.py  trainer.py  utils.py  vis.py
test/: conftest.py
test/datasets/: test_aisle.py  test_datalab.py
test/models/: test_audiolm.py  test_discriminator.py  test_lit_transformers.py  test_mulan.py  test_musiclm.py  test_predictor.py  test_timegan.py
test/models/audiolm_pytorch/: test_audiolm_pytorch.py
test/utils/: test_metrics.py  test_vis.py
tests/: conftest.py
tests/sai/datasets/: test_datalab.py
tests/sai/models/: test_audiolm.py  test_discriminator.py  test_lit_transformers.py  test_predictor.py  test_timegan.py
tests/sai/utils/: test_metrics.py
